dejo grabado con pagina404

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
      <header class="boda">
               <a href="#"> <!--enlace para tocar el logo y que vuelva a inicio-->
-             <div class="logo">
+             <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
              <img class="logodorado" src="./assets/images/sslogo.png" alt="Logos&srosa.png">
     </header>
     <nav class="navbar navbar-expand-lg navbar-light class">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> 
-          <img src="assets/images/corazon.jpg.svg" alt="corazon.jpg" width="30" height="24"></a>
+          <img src="assets/images/corazon.jpg.svg"loading="lazy" alt="corazon.jpg" width="30" height="24"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -66,39 +66,38 @@
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                   <div class="col">
                     <div class="card">
-                      <img src="./assets/images/bodai.jpg" class="card-img-top" alt="besoboda.jpg">
+                      <img class="mover" src="./assets/images/bodai.jpg" loading="lazy" class="card-img-top" alt="besoboda.jpg">
                       <div class="card-body">
-                        <h5 class="card-title">Hoy, mañana y siempre</h5>
+                        <h3 class="card-title">Hoy, mañana y siempre</h3>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img src="./assets/images/besoboda.jpg" class="card-img-top" alt="besodandoelsi.jpg">
+                      <img class="mover" src="./assets/images/besoboda.jpg"loading="lazy" class="card-img-top" alt="besodandoelsi.jpg">
                       <div class="card-body">
-                        <h5 class="card-title">Caminaré contigo</h5>
+                        <h3 class="card-title">Caminaré contigo</h3>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img src="./assets/images/bodao.jpg" class="card-img-top" alt="vestidonoviasofia.jpg">
+                      <img class="mover"src="./assets/images/bodao.jpg"loading="lazy" class="card-img-top" alt="vestidonoviasofia.jpg">
                       <div class="card-body">
-                        <h5 class="card-title">Un amor, un corazón, un destino</h5>
+                        <h3 class="card-title">Un amor, un corazón, un destino</h3>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img src="./assets/images/bodaj.jpg" class="card-img-top" alt="ramodenovia.jpg">
+                      <img class="mover" src="./assets/images/bodaj.jpg"loading="lazy" class="card-img-top" alt="ramodenovia.jpg">
                       <div class="card-body">
-                        <h5 class="card-title">Sonriendo juntos y ahora para siempre.
-                        </h5>
+                        <h3 class="card-title">Sonriendo juntos y para siempre. </h3>
                       </div>
                     </div>
                   </div>
                 </div>
-                 
+             
          <hr class="featurette-divider">
         <section class="section-vision">
               <h2 class="matrimonio my-3 display-3 h1">¿Cómo amarnos en matrimonio?</h2>
@@ -115,9 +114,9 @@
     <footer class="foot">           
           <div class= "iconos">
              <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-             <img src="./assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
+             <img src="./assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
              <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-             <img src="./assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg"></a>
+             <img src="./assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
           </div> 
          <div>
           Copyright 2022 - Desarrollado por Borsato Sofia
