--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
      <body>
         <header class="boda4">
             <a href="../index.html">
-            <div class="logo">
+            <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
               <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
             </div> 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -57,59 +57,57 @@
                     Gracias por su presencia en este día tan Especial.</p>
                 </div>
 
-                          <form class="row g-3 my-4 ">
+                          <form  action="error.html" method="post" class="row g-3 my-4"> 
                               <div class="mb-3 shadow p-3 mb-5 bg-body rounded ">
                                   <label for="inputAddress" class="form-label  ">Nombre</label>
-                                  <input type="text" class="form-control" id="inputAddress" placeholder="*" required>
+                                  <input type="text" class="form-control" id="inputAddress" placeholder="*"required>
                               </div>
                               <div class="mb-3 shadow p-3 mb-5 bg-body rounded">
                                 <label for="inputAddress" class="form-label">Déjanos tus Buenos Deseos </label>
                                 <input type="text" class="form-control" id="inputAddress" placeholder="*">
                                 <div id="emailHelp" class="form-text fst-italic">Gracias por compartirlo con Nosotros</div>
                             </div>
+                          </div>
                               <div class="mb-3 shadow p-3 mb-5 bg-body rounded">
                                 <label for="inputEmail4" class="form-label">Email</label>
                                 <input type="email" class="form-control" id="inputEmail4" placeholder="*" required>
                                 <div id="emailHelp" class="form-text fst-italic">En breve le llegaran todos los Datos en su Casilla de mail</div>
                               </div>
+                            </div>
                               <div class="col-12">
                                 <div class="form-check ">
                                   <input class="form-check-input  rounded-circle shadow-sm fs-4" type="checkbox" checked id="gridCheck">
                                   <label class="form-check-label fw-bold shadow-sm p-3 mb-5 bg-body rounded fs-6" for="gridCheck">
                                     Deseo Suscribirme 
                                   </label>
+                                  <a href="./error.html"><input class="btn boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse"type="submit" value="Enviar"> </a>
                                 </div>
-                              </div>
-                              <div>
-                                  <button class="boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse" type="submit">Enviar</button>
-                              </div>
+                              </div>           
                           </form>
-                      </div>    
-                  </div>        
-              </div>
+
               <div class="corazonrosa"> </div> 
                 <section class="tarjetas my-2">
                     <div class="card-group">
                       <div class="card">
-                        <img src="../assets/images/c.jpg" class="card-img-top" alt="novios relatando anecdotas">
+                        <img src="../assets/images/c.jpg"loading="lazy" class="card-img-top" alt="novios relatando anecdotas">
                         <div class="card-body">
-                          <h5 class="card-title">UNA BODA CON ANÉCDOTAS</h5>
+                          <h4 class="card-title">UNA BODA CON ANÉCDOTAS</h4>
                           <p class="card-text">Anectodas de como nos conocimos, el camino recorrido , los años , y las cosas vergonzosas que vivimos. </p>
                           <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/a.jpg" class="card-img-top" alt="elvals">
+                        <img src="../assets/images/a.jpg"loading="lazy" class="card-img-top" alt="elvals">
                         <div class="card-body">
-                          <h5 class="card-title">NO FALTA EL CLÁSICO VALS</h5>
+                          <h4 class="card-title">NO FALTA EL CLÁSICO VALS</h4>
                           <p class="card-text">Momento familiar Clasico en toda boda que deja un Recuerdo Especial en todos los corazones.</p>
                           <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/b.jpg" class="card-img-top " alt="toro mecanico">
+                        <img src="../assets/images/b.jpg"loading="lazy" class="card-img-top " alt="toro mecanico">
                         <div class="card-body">
-                          <h5 class="card-title">JUEGOS AL AIRE LIBRE</h5>
+                          <h4 class="card-title">JUEGOS AL AIRE LIBRE</h4>
                           <p class="card-text"> Toro Mecánico , fueron muchos los valientes derrotados , Predio Club Golf de Villa Maria.  </p>
                           <p class="card-text"><small class="text-muted ">  SOFI & SEBA  </small></p>
                         </div>
@@ -120,10 +118,10 @@
          <br>
          <footer class="foot">           
           <div class= "iconos">
-            <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
+            <a href="https://msng.link/o/?sofia.borsato=ig"loading="lazy" target="_blank" >
               <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
               <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-              <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg"></a>
+              <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
           </div> 
          <div>
           Copyright 2022 - Desarrollado por Borsato Sofia
