--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> S&S-Nuestra Boda</title>
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -13,13 +14,13 @@
      <header class="boda1"> <!--todos los header con el mismo estilado y footer a cada uno mediante la class le pude variar
         la imagen de fondo para que sea mas dinamico y elegante-->
             <a href="../index.html">
-                <div class="logo">
-                <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
+                <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
+                <img src="../assets/images/sslogo.png"loading="lazy" alt="Logos&srosa.png">
                 </div> 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
                       <a class="navbar-brand" href="#"> 
-                      <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo" width="30" height="24"></a>
+                      <img src="../assets/images/corazon.jpg.svg"loading="lazy" alt="corazonrojo" width="30" height="24"></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -94,9 +95,9 @@
     <footer class="foot">           
       <div class= "iconos">
          <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-         <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
+         <img src="../assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
          <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-         <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg"></a>
+         <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
       </div> 
      <div>
       Copyright 2022 - Desarrollado por Borsato Sofia
