--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S&S-Galeria</title>
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -12,13 +13,13 @@
 <body>
     <header class="boda3">
             <a href="../index.html"> <!--desde cada pages vuelvo a inicio tocando mi logo-->
-            <div class="logo">
-               <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
+            <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
+               <img src="../assets/images/sslogo.png"loading="lazy" alt="Logos&srosa.png">
             </div> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="container-fluid">
                   <a class="navbar-brand" href="#"> 
-                  <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo.jpg" width="30" height="24"></a>
+                  <img src="../assets/images/corazon.jpg.svg"loading="lazy" alt="corazonrojo.jpg" width="30" height="24"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -55,13 +56,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/images/civil1.jpg" class="d-block w-100" alt="retratodelcivil1">
+                <img src="../assets/images/civil1.jpg"loading="lazy" class="d-block w-100" alt="retratodelcivil1">
               </div>
               <div class="carousel-item">
-                <img src="../assets/images/civil2.jpg" class="d-block w-100" alt="retratodelcivil2">
+                <img src="../assets/images/civil2.jpg"loading="lazy" class="d-block w-100" alt="retratodelcivil2">
               </div>
               <div class="carousel-item">
-                <img src="../assets/images/civil3.jpg" class="d-block w-100" alt="retratodelcivil3">
+                <img src="../assets/images/civil3.jpg"loading="lazy" class="d-block w-100" alt="retratodelcivil3">
               </div>
             </div>
            
@@ -83,13 +84,13 @@
         <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/images/boda1.jpg" class="d-block w-100" alt="fotoalairelibreboda">
+              <img src="../assets/images/boda1.jpg"loading="lazy" class="d-block w-100" alt="fotoalairelibreboda">
             </div>
             <div class="carousel-item">
-              <img src="../assets/images/boda2.jpg" class="d-block w-100" alt="entradaalsalonnovios">
+              <img src="../assets/images/boda2.jpg"loading="lazy" class="d-block w-100" alt="entradaalsalonnovios">
             </div>
             <div class="carousel-item">
-              <img src="../assets/images/boda6.jpg" class="d-block w-100" alt="decoracionexteriorboda">
+              <img src="../assets/images/boda6.jpg"loading="lazy" class="d-block w-100" alt="decoracionexteriorboda">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
@@ -110,13 +111,13 @@
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="../assets/images/1.jpg" class="d-block w-100" alt="noviosdelamano">
+            <img src="../assets/images/1.jpg" loading="lazy"class="d-block w-100" alt="noviosdelamano">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="../assets/images/2.jpg" class="d-block w-100" alt="sillasexteriorboda">
+            <img src="../assets/images/2.jpg"loading="lazy" class="d-block w-100" alt="sillasexteriorboda">
           </div>
           <div class="carousel-item">
-            <img src="../assets/images/3.jpg" class="d-block w-100" alt="besodebodasenexteriores">
+            <img src="../assets/images/3.jpg"loading="lazy" class="d-block w-100" alt="besodebodasenexteriores">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -135,9 +136,9 @@
     <footer class="foot">           
       <div class= "iconos">
         <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
+          <img src="../assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
           <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg"></a>
+          <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
       </div> 
      <div>
       Copyright 2022 - Desarrollado por Borsato Sofia
