--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,7 +13,7 @@
 <body>
     <header class="boda2">
             <a href="../index.html">
-            <div class="logo">
+            <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
                <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
             </div> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -83,7 +83,7 @@
         <div class="container-fluid1 my-3">
             <div class="row">
                  <div class="col-md-6 col-sm-12">
-                   <img class="fotografias rounded-circle" src="../assets/images/nosotros1" alt="sebastian">
+                   <img class="fotografias rounded-circle" src="../assets/images/nosotros1"loading="lazy" alt="sebastian">
                  </div>
                  <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                     <div>
@@ -101,7 +101,7 @@
        <section>
             <div class="container-fluid3 my-3">
                 <div class="card bg-dark text-white">
-                     <img src="../assets/images/preboda.jpg" class="card-img" alt="nuestrapreboda.jpg">
+                     <img src="../assets/images/preboda.jpg"loading="lazy" class="card-img" alt="nuestrapreboda.jpg">
                     <div class="card-img-overlay">
                       <h5 class="card-title ">FUISTE ,ERES, Y SIEMPRE SERÁS MI MÁS BONITA CASUALIDAD </h5>
                     </div>
@@ -112,9 +112,9 @@
     <footer class="foot">           
       <div class= "iconos">
         <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
+          <img src="../assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
           <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg"></a>
+          <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
       </div> 
      <div>
       Copyright 2022 - Desarrollado por Borsato Sofia
