--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="El día de nuestra boda, como fue, donde sucedió, en que predio,
+    y mucho mas para que puedas encontrar en esta pestaña.">
+    <meta name="keywords" content="nuestra boda, alianza, historia real, aire libre, juntos, relato de amor">
     <title> S&S-Nuestra Boda</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
@@ -11,16 +14,15 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-     <header class="boda1"> <!--todos los header con el mismo estilado y footer a cada uno mediante la class le pude variar
-        la imagen de fondo para que sea mas dinamico y elegante-->
+     <header class="boda1"> 
             <a href="../index.html">
                 <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
-                <img src="../assets/images/sslogo.png"loading="lazy" alt="Logos&srosa.png">
+                <img src="../assets/images/sslogo.png" alt="Logos&srosa.png" loading="lazy">
                 </div> 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
                       <a class="navbar-brand" href="#"> 
-                      <img src="../assets/images/corazon.jpg.svg"loading="lazy" alt="corazonrojo" width="30" height="24"></a>
+                      <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo"loading="lazy" width="30" height="24"></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -95,9 +97,9 @@
     <footer class="foot">           
       <div class= "iconos">
          <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-         <img src="../assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
+         <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg" loading="lazy"></a>
          <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-         <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
+         <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg" loading="lazy"></a>
       </div> 
      <div>
       Copyright 2022 - Desarrollado por Borsato Sofia
