--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Te invitamos a sumergirte en una historia de amor y relato de nuestro día de bodas soñado, donde esperamos inspirarte para que puedas proyectar
+        los momentos de tu vida más importantes volcados en un sitio web.">
+        <meta name="keywords" content="boda, amor, historia, casamiento, juntos, matrimonio">
         <title> S&S-Inicio </title>
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="shortcut icon" href="./assets/images/heart-svgrepo-com (1).svg" type="image/png" />
@@ -15,7 +18,7 @@
      <header class="boda">
               <a href="#"> <!--enlace para tocar el logo y que vuelva a inicio-->
              <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
-             <img class="logodorado" src="./assets/images/sslogo.png" alt="Logos&srosa.png">
+             <img class="logodorado" src="./assets/images/sslogo.png" alt="Logos&srosa.png" loading="lazy">
     </header>
     <nav class="navbar navbar-expand-lg navbar-light class">
         <div class="container-fluid">
@@ -66,7 +69,7 @@
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                   <div class="col">
                     <div class="card">
-                      <img class="mover" src="./assets/images/bodai.jpg" loading="lazy" class="card-img-top" alt="besoboda.jpg">
+                      <img class="mover" src="./assets/images/bodai.jpg" class="card-img-top" alt="besoboda.jpg" loading="lazy">
                       <div class="card-body">
                         <h3 class="card-title">Hoy, mañana y siempre</h3>
                       </div>
@@ -74,7 +77,7 @@
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img class="mover" src="./assets/images/besoboda.jpg"loading="lazy" class="card-img-top" alt="besodandoelsi.jpg">
+                      <img class="mover" src="./assets/images/besoboda.jpg"class="card-img-top" alt="besodandoelsi.jpg" loading="lazy">
                       <div class="card-body">
                         <h3 class="card-title">Caminaré contigo</h3>
                       </div>
@@ -82,7 +85,7 @@
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img class="mover"src="./assets/images/bodao.jpg"loading="lazy" class="card-img-top" alt="vestidonoviasofia.jpg">
+                      <img class="mover"src="./assets/images/bodao.jpg"class="card-img-top" alt="vestidonoviasofia.jpg" loading="lazy">
                       <div class="card-body">
                         <h3 class="card-title">Un amor, un corazón, un destino</h3>
                       </div>
@@ -90,7 +93,7 @@
                   </div>
                   <div class="col">
                     <div class="card">
-                      <img class="mover" src="./assets/images/bodaj.jpg"loading="lazy" class="card-img-top" alt="ramodenovia.jpg">
+                      <img class="mover" src="./assets/images/bodaj.jpg" class="card-img-top" alt="ramodenovia.jpg" loading="lazy">
                       <div class="card-body">
                         <h3 class="card-title">Sonriendo juntos y para siempre. </h3>
                       </div>
@@ -114,9 +117,9 @@
     <footer class="foot">           
           <div class= "iconos">
              <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-             <img src="./assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
+             <img src="./assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg" loading="lazy"></a>
              <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-             <img src="./assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
+             <img src="./assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg" loading="lazy"></a>
           </div> 
          <div>
           Copyright 2022 - Desarrollado por Borsato Sofia
