--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nuestro contacto para que puedas ayudarnos en este hermoso viaje que es el amor,
+    con nuestra luna de miel soñada, gracias a cada uno por su esmero.">
+    <meta name="keywords" content="contacto, luna de miel, viaje, deseos, buenas vibras">
     <title>S&S-Contacto</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png"/>
@@ -89,7 +92,7 @@
                 <section class="tarjetas my-2">
                     <div class="card-group">
                       <div class="card">
-                        <img src="../assets/images/c.jpg"loading="lazy" class="card-img-top" alt="novios relatando anecdotas">
+                        <img src="../assets/images/c.jpg" class="card-img-top" alt="novios relatando anecdotas" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">UNA BODA CON ANÉCDOTAS</h4>
                           <p class="card-text">Anectodas de como nos conocimos, el camino recorrido , los años , y las cosas vergonzosas que vivimos. </p>
@@ -97,7 +100,7 @@
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/a.jpg"loading="lazy" class="card-img-top" alt="elvals">
+                        <img src="../assets/images/a.jpg" class="card-img-top" alt="elvals" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">NO FALTA EL CLÁSICO VALS</h4>
                           <p class="card-text">Momento familiar Clasico en toda boda que deja un Recuerdo Especial en todos los corazones.</p>
@@ -105,7 +108,7 @@
                         </div>
                       </div>
                       <div class="card">
-                        <img src="../assets/images/b.jpg"loading="lazy" class="card-img-top " alt="toro mecanico">
+                        <img src="../assets/images/b.jpg" class="card-img-top " alt="toro mecanico" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">JUEGOS AL AIRE LIBRE</h4>
                           <p class="card-text"> Toro Mecánico , fueron muchos los valientes derrotados , Predio Club Golf de Villa Maria.  </p>
@@ -118,10 +121,10 @@
          <br>
          <footer class="foot">           
           <div class= "iconos">
-            <a href="https://msng.link/o/?sofia.borsato=ig"loading="lazy" target="_blank" >
-              <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg"></a>
+            <a href="https://msng.link/o/?sofia.borsato=ig"target="_blank" >
+              <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg" loading="lazy"></a>
               <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-              <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
+              <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg" loading="lazy"></a>
           </div> 
          <div>
           Copyright 2022 - Desarrollado por Borsato Sofia
