--- a/pages/error.html
+++ b/pages/error.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="página de error 404">
+    <meta name="keywords" content="error, error404, boda, retorno, Volver">
     <title>S&S-Error 404</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
@@ -15,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"> 
-              <img src="../assets/images/corazon.jpg.svg"loading="lazy" alt="corazonrojo.jpg" width="30" height="24"></a>
+              <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo.jpg" loading="lazy" width="30" height="24"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -45,14 +47,14 @@
      <h1 class="tituloprincipal">ERROR 404</h1>
      <h2 class="titulos">Disculpe las molestias</h2>
      <a class="intro" href="../index.html">Volver a página principal </a> 
-     <img class="fotografias rounded-circle my-3" src="../assets/images/fotosofi.jpg.jpg"loading="lazy" alt="bodasofiredonda">
+     <img class="fotografias rounded-circle my-3" src="../assets/images/fotosofi.jpg.jpg" alt="bodasofiredonda" loading="lazy">
     <footer>
         <footer class="foot">           
             <div class= "iconos">
               <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-                <img src="../assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
+                <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg" loading="lazy"></a>
                 <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-                <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
+                <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg" loading="lazy"></a>
             </div> 
            <div>
             Copyright 2022 - Desarrollado por Borsato Sofia
