--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Una galería con fotos especiales elegidas por nosotros con mucho amor, para que puedas disfrutar un
+    poquito nuestra alegría ese día y apreciar juntos los momentos llenos de amor y gratitud">
+    <meta name="keywords" content="galeria, fotos de boda, fotos civil, boda al aire libre, ceremonia">
     <title>S&S-Galeria</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
@@ -14,7 +17,7 @@
     <header class="boda3">
             <a href="../index.html"> <!--desde cada pages vuelvo a inicio tocando mi logo-->
             <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
-               <img src="../assets/images/sslogo.png"loading="lazy" alt="Logos&srosa.png">
+               <img src="../assets/images/sslogo.png" alt="Logos&srosa.png" loading="lazy">
             </div> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="container-fluid">
@@ -56,13 +59,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/images/civil1.jpg"loading="lazy" class="d-block w-100" alt="retratodelcivil1">
+                <img src="../assets/images/civil1.jpg" class="d-block w-100" alt="retratodelcivil1" loading="lazy">
               </div>
               <div class="carousel-item">
-                <img src="../assets/images/civil2.jpg"loading="lazy" class="d-block w-100" alt="retratodelcivil2">
+                <img src="../assets/images/civil2.jpg" class="d-block w-100" alt="retratodelcivil2" loading="lazy">
               </div>
               <div class="carousel-item">
-                <img src="../assets/images/civil3.jpg"loading="lazy" class="d-block w-100" alt="retratodelcivil3">
+                <img src="../assets/images/civil3.jpg" class="d-block w-100" alt="retratodelcivil3" loading="lazy">
               </div>
             </div>
            
@@ -84,13 +87,13 @@
         <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../assets/images/boda1.jpg"loading="lazy" class="d-block w-100" alt="fotoalairelibreboda">
+              <img src="../assets/images/boda1.jpg" class="d-block w-100" alt="fotoalairelibreboda" loading="lazy">
             </div>
             <div class="carousel-item">
-              <img src="../assets/images/boda2.jpg"loading="lazy" class="d-block w-100" alt="entradaalsalonnovios">
+              <img src="../assets/images/boda2.jpg" class="d-block w-100" alt="entradaalsalonnovios" loading="lazy">
             </div>
             <div class="carousel-item">
-              <img src="../assets/images/boda6.jpg"loading="lazy" class="d-block w-100" alt="decoracionexteriorboda">
+              <img src="../assets/images/boda6.jpg" class="d-block w-100" alt="decoracionexteriorboda" loading="lazy">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
@@ -111,13 +114,13 @@
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="../assets/images/1.jpg" loading="lazy"class="d-block w-100" alt="noviosdelamano">
+            <img src="../assets/images/1.jpg" class="d-block w-100" alt="noviosdelamano" loading="lazy">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="../assets/images/2.jpg"loading="lazy" class="d-block w-100" alt="sillasexteriorboda">
+            <img src="../assets/images/2.jpg" class="d-block w-100" alt="sillasexteriorboda" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="../assets/images/3.jpg"loading="lazy" class="d-block w-100" alt="besodebodasenexteriores">
+            <img src="../assets/images/3.jpg" class="d-block w-100" alt="besodebodasenexteriores" loading="lazy">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -136,9 +139,9 @@
     <footer class="foot">           
       <div class= "iconos">
         <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-          <img src="../assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
+          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg" loading="lazy"></a>
           <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-          <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
+          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg" loading="lazy"></a>
       </div> 
      <div>
       Copyright 2022 - Desarrollado por Borsato Sofia
