--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="El día de nuestra boda, como fue, donde sucedió, en que predio,
+    y mucho mas para que puedas encontrar en esta pestaña.">
+    <meta name="keywords" content="nosotros, amor de pareja, opiniones, contexto, juntos por siempre">
     <title>S&S-Nosotros</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
@@ -14,12 +17,12 @@
     <header class="boda2">
             <a href="../index.html">
             <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
-               <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
+               <img src="../assets/images/sslogo.png" alt="Logos&srosa.png" loading="lazy">
             </div> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <div class="container-fluid">
                   <a class="navbar-brand" href="#"> 
-                  <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo.jpg" width="30" height="24"></a>
+                  <img src="../assets/images/corazon.jpg.svg" alt="corazonrojo.jpg" loading="lazy" width="30" height="24"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -66,7 +69,7 @@
             <div class="container-fluid1 my-3">
                 <div class="row my-3">
                      <div class="col-md-6 col-sm-12">
-                       <img class="fotografias rounded-circle my-3" src="../assets/images/nosotros2" alt="sofia">
+                       <img class="fotografias rounded-circle my-3" src="../assets/images/nosotros2" alt="sofia" loading="lazy">
                      </div>
                      <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                         <div>
@@ -101,7 +104,7 @@
        <section>
             <div class="container-fluid3 my-3">
                 <div class="card bg-dark text-white">
-                     <img src="../assets/images/preboda.jpg"loading="lazy" class="card-img" alt="nuestrapreboda.jpg">
+                     <img src="../assets/images/preboda.jpg"class="card-img" alt="nuestrapreboda.jpg" loading="lazy">
                     <div class="card-img-overlay">
                       <h5 class="card-title ">FUISTE ,ERES, Y SIEMPRE SERÁS MI MÁS BONITA CASUALIDAD </h5>
                     </div>
@@ -112,9 +115,9 @@
     <footer class="foot">           
       <div class= "iconos">
         <a href="https://msng.link/o/?sofia.borsato=ig" target="_blank" >
-          <img src="../assets/images/insta chiquito.svg"loading="lazy" height="30" width="30"  alt="instagram.svg"></a>
+          <img src="../assets/images/insta chiquito.svg" height="30" width="30"  alt="instagram.svg" loading="lazy"></a>
           <a href="https://wa.me/3471623833?text=whatsapp" target="_blank">
-          <img src="../assets/images/whatsapp chiquito.svg"loading="lazy" height="30" width="30" alt="whatsapp.svg"></a>
+          <img src="../assets/images/whatsapp chiquito.svg" height="30" width="30" alt="whatsapp.svg" loading="lazy"></a>
       </div> 
      <div>
       Copyright 2022 - Desarrollado por Borsato Sofia
