--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -95,7 +95,7 @@
                         <img src="../assets/images/c.jpg" class="card-img-top" alt="novios relatando anecdotas" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">UNA BODA CON ANÉCDOTAS</h4>
-                          <p class="card-text">Anectodas de como nos conocimos, el camino recorrido , los años , y las cosas vergonzosas que vivimos. </p>
+                          <p class="card-text">Anécdotas, el camino recorrido , los años , y las cosas vergonzosas que vivimos. </p>
                           <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
                         </div>
                       </div>
@@ -103,7 +103,7 @@
                         <img src="../assets/images/a.jpg" class="card-img-top" alt="elvals" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">NO FALTA EL CLÁSICO VALS</h4>
-                          <p class="card-text">Momento familiar Clasico en toda boda que deja un Recuerdo Especial en todos los corazones.</p>
+                          <p class="card-text">Momento familiar Clasico que deja Un Recuerdo Especial en todos los corazones.</p>
                           <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
                         </div>
                       </div>
@@ -111,7 +111,7 @@
                         <img src="../assets/images/b.jpg" class="card-img-top " alt="toro mecanico" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">JUEGOS AL AIRE LIBRE</h4>
-                          <p class="card-text"> Toro Mecánico , fueron muchos los valientes derrotados , Predio Club Golf de Villa Maria.  </p>
+                          <p class="card-text"> Toro Mecánico , fueron muchos los valientes derrotados.  </p>
                           <p class="card-text"><small class="text-muted ">  SOFI & SEBA  </small></p>
                         </div>
                       </div>
