--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,9 +83,9 @@
                                   <label class="form-check-label fw-bold shadow-sm p-3 mb-5 bg-body rounded fs-6" for="gridCheck">
                                     Deseo Suscribirme 
                                   </label>
-                                  <a href="./error.html"><input class="btn boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse"type="submit" value="Enviar"> </a>
                                 </div>
-                              </div>           
+                              </div> 
+                              <div> <a href=""><input class="btn boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse"type="submit" value="Enviar"> </a></div>          
                           </form>
 
               <div class="corazonrosa"> </div> 
@@ -95,7 +95,7 @@
                         <img src="../assets/images/c.jpg" class="card-img-top" alt="novios relatando anecdotas" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">UNA BODA CON ANÉCDOTAS</h4>
-                          <p class="card-text">Anécdotas, el camino recorrido , los años , y las cosas vergonzosas que vivimos. </p>
+                          <p class="card-text"> Las cosas vergonzosas que vivimos. </p>
                           <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
                         </div>
                       </div>
@@ -103,7 +103,7 @@
                         <img src="../assets/images/a.jpg" class="card-img-top" alt="elvals" loading="lazy">
                         <div class="card-body">
                           <h4 class="card-title">NO FALTA EL CLÁSICO VALS</h4>
-                          <p class="card-text">Momento familiar Clasico que deja Un Recuerdo Especial en todos los corazones.</p>
+                          <p class="card-text"> Un Recuerdo Especial en todos los corazones.</p>
                           <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
                         </div>
                       </div>
