grabo con correcion en form 404 nuevo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,9 +83,9 @@
                                   <label class="form-check-label fw-bold shadow-sm p-3 mb-5 bg-body rounded fs-6" for="gridCheck">
                                     Deseo Suscribirme 
                                   </label>
+                                  <a href=""><input class="btn boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse"type="submit" value="Enviar"> </a>  
                                 </div>
-                              </div> 
-                              <div> <a href=""><input class="btn boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse"type="submit" value="Enviar"> </a></div>          
+                              </div>       
                           </form>
 
               <div class="corazonrosa"> </div> 
