grabo error 404 nuevodos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,7 @@
                     Gracias por su presencia en este día tan Especial.</p>
                 </div>
 
-                          <form  action="error.html" method="post" class="row g-3 my-4"> 
+                          <form  action="./error.html" method="post" class="row g-3 my-4"> 
                               <div class="mb-3 shadow p-3 mb-5 bg-body rounded ">
                                   <label for="inputAddress" class="form-label  ">Nombre</label>
                                   <input type="text" class="form-control" id="inputAddress" placeholder="*"required>
@@ -83,7 +83,7 @@
                                   <label class="form-check-label fw-bold shadow-sm p-3 mb-5 bg-body rounded fs-6" for="gridCheck">
                                     Deseo Suscribirme 
                                   </label>
-                                  <a href=""><input class="btn boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse"type="submit" value="Enviar"> </a>  
+                                  <a href="./error.html"><input class="btn boton btn btn-success my-3 d-flex justify-content-center animate__animated animate__infinite   animation-duration: 2s; animate__pulse"type="submit" value="Enviar"> </a>  
                                 </div>
                               </div>       
                           </form>
