cambios ya realizados listos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -87,36 +87,49 @@
                                 </div>
                               </div>       
                           </form>
-
+              <section> 
               <div class="corazonrosa"> </div> 
-                <section class="tarjetas my-2">
-                    <div class="card-group">
-                      <div class="card">
-                        <img src="../assets/images/c.jpg" class="card-img-top" alt="novios relatando anecdotas" loading="lazy">
-                        <div class="card-body">
-                          <h4 class="card-title">UNA BODA CON ANÉCDOTAS</h4>
-                          <p class="card-text"> Las cosas vergonzosas que vivimos. </p>
-                          <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <img src="../assets/images/a.jpg" class="card-img-top" alt="elvals" loading="lazy">
-                        <div class="card-body">
-                          <h4 class="card-title">NO FALTA EL CLÁSICO VALS</h4>
-                          <p class="card-text"> Un Recuerdo Especial en todos los corazones.</p>
-                          <p class="card-text"><small class="text-muted">SOFI & SEBA </small></p>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <img src="../assets/images/b.jpg" class="card-img-top " alt="toro mecanico" loading="lazy">
-                        <div class="card-body">
-                          <h4 class="card-title">JUEGOS AL AIRE LIBRE</h4>
-                          <p class="card-text"> Toro Mecánico , fueron muchos los valientes derrotados.  </p>
-                          <p class="card-text"><small class="text-muted ">  SOFI & SEBA  </small></p>
-                        </div>
-                      </div>
+              <h4 class="textoregalo my-5">POSTALES DE LA BODA </h4>
+              <p class="texto-n my-1">Leer es soñar con los ojos abiertos</p>
+              <p class="texto-n my-1">¡ Gracias por leer nuestra historia !</p>
+              <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                  <div class="card">
+                    <img class="mover" src="../assets/images/a.jpg" class="card-img-top" alt="besoboda.jpg" loading="lazy">
+                    <div class="card-body">
+                      <h3 class="card-title">EL CLÁSICO VALS</h3>
+                      <p class="vision">Un recuerdo muy especial</p>
                     </div>
-                </section>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img class="mover" src="../assets/images/b.jpg"class="card-img-top" alt="besodandoelsi.jpg" loading="lazy">
+                    <div class="card-body">
+                      <h3 class="card-title">JUEGOS AL AIRE LIBRE</h3>
+                      <p class="vision">Muchos valientes caídos</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img class="mover" src="../assets/images/c.jpg"class="card-img-top" alt="besodandoelsi.jpg" loading="lazy">
+                    <div class="card-body">
+                      <h3 class="card-title">ANÉCDOTAS GRACIOSAS</h3>
+                      <p class="vision">No podían faltar </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img class="mover" src="../assets/images/d.jpg.jpg"class="card-img-top" alt="besodandoelsi.jpg" loading="lazy">
+                    <div class="card-body">
+                      <h3 class="card-title">¿ QUIÉN QUIERE EL RAMO ? </h3>
+                      <p class="vision"> Momento de incertidumbre</p>
+                    </div>
+                  </div>
+                </div>
+              </section>
         </main>
          <br>
          <footer class="foot">           
