--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -102,12 +102,9 @@
             </div>
        </div>
        <section>
-            <div class="container-fluid3 my-3">
-                <div class="card bg-dark text-white">
+            <div class="container-md my-1">
+                     <h4 class="texto-n">ERES, FUISTE, Y SERÁS MI MÁS BONITA CASUALIDAD</h4>
                      <img src="../assets/images/preboda.jpg"class="card-img" alt="nuestrapreboda.jpg" loading="lazy">
-                    <div class="card-img-overlay">
-                      <h5 class="card-title ">FUISTE ,ERES, Y SIEMPRE SERÁS MI MÁS BONITA CASUALIDAD </h5>
-                    </div>
                 </div>
             </div>
         </section>
