grabo antes de proyecto final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
      <body>
         <header class="boda4">
             <a href="../index.html">
-            <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
+            <div class="logo">
               <img src="../assets/images/sslogo.png" alt="Logos&srosa.png">
             </div> 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -89,7 +89,7 @@
                           </form>
               <section> 
               <div class="corazonrosa"> </div> 
-              <h4 class="textoregalo my-5">POSTALES DE LA BODA </h4>
+              <h4 class="textoregalo text-decoration-underline my-5">POSTALES DE LA BODA </h4>
               <p class="texto-n my-1">Leer es soñar con los ojos abiertos</p>
               <p class="texto-n my-1">¡ Gracias por leer nuestra historia !</p>
               <div class="row row-cols-1 row-cols-md-2 g-4">
