--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -16,7 +16,7 @@
 <body>
     <header class="boda3">
             <a href="../index.html"> <!--desde cada pages vuelvo a inicio tocando mi logo-->
-            <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
+            <div class="logo">
                <img src="../assets/images/sslogo.png" alt="Logos&srosa.png" loading="lazy">
             </div> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -56,7 +56,7 @@
                 </p>
                 <hr class="featurette-divider">
           <section class="galeria justify-content-around my-4">  
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleControls" class="carousel" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="../assets/images/civil1.jpg" class="d-block w-100" alt="retratodelcivil1" loading="lazy">
@@ -84,7 +84,7 @@
             Fuerte es el amor, como la muerte, y tenaz la pasión, como el sepulcro.
         </p>
 
-        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+        <div id="carouselExampleControlsNoTouching" class="carousel" data-bs-touch="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="../assets/images/boda1.jpg" class="d-block w-100" alt="fotoalairelibreboda" loading="lazy">
@@ -111,7 +111,7 @@
         <div class="corazonrosa"> </div> 
      
         
-      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleInterval" class="carousel" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
             <img src="../assets/images/1.jpg" class="d-block w-100" alt="noviosdelamano" loading="lazy">
