--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,7 +16,7 @@
 <body>
     <header class="boda2">
             <a href="../index.html">
-            <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
+            <div class="logo">
                <img src="../assets/images/sslogo.png" alt="Logos&srosa.png" loading="lazy">
             </div> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -73,7 +73,7 @@
                      </div>
                      <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                         <div>
-                            <h2 class="s my-2 animate__animated animate__pulse"> SOFIA </h2>
+                            <h2 class="s my-2 animate__animated animate__pulse animate__infinite "> SOFIA </h2>
                         <p class="sofia"> Como relatante de esta historia quiero presentarme, 
                             tengo 27 años, vivo en la cuidad de Villa María provincia de Córdoba.
                             Soy una persona que le gusta la simpleza y
@@ -90,7 +90,7 @@
                  </div>
                  <div class="col-md-6 col-sm-12 d-flex flex-column align-items-center justify-content-center">
                     <div>
-                        <h2 class="s animate__animated animate__pulse"> SEBASTIAN </h2>
+                        <h2 class="s animate__animated animate__pulse animate__infinite"> SEBASTIAN </h2>
                         <p class="sofia my-2"> 
                         Tengo 28 años, vivo en la cuidad de Villa María provincia de Córdoba,
                         esperamos ansiosos la llegada de nuestra bebita. 
@@ -102,9 +102,9 @@
             </div>
        </div>
        <section>
-            <div class="container-md my-1">
-                     <h4 class="texto-n">ERES, FUISTE, Y SERÁS MI MÁS BONITA CASUALIDAD</h4>
-                     <img src="../assets/images/preboda.jpg"class="card-img" alt="nuestrapreboda.jpg" loading="lazy">
+            <div class="container-md my-5">
+                     <h4 class="texto-n  fst-italic fw-bolder my-3">ERES, FUISTE, Y SERÁS MI MÁS BONITA CASUALIDAD</h4>
+                     <img src="../assets/images/preboda.jpg"class="card-img rounded-circle" alt="nuestrapreboda.jpg" loading="lazy">
                 </div>
             </div>
         </section>
