--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -16,7 +16,7 @@
 <body>
      <header class="boda1"> 
             <a href="../index.html">
-                <div class="logo animate__animated animate__shakeX animate-duration: 2s;">
+                <div class="logo">
                 <img src="../assets/images/sslogo.png" alt="Logos&srosa.png" loading="lazy">
                 </div> 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
