proyecto casi revisado

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Te invitamos a sumergirte en una historia de amor y relato de nuestro día de bodas soñado, donde esperamos inspirarte para que puedas proyectar
         los momentos de tu vida más importantes volcados en un sitio web.">
         <meta name="keywords" content="boda, amor, historia, casamiento, juntos, matrimonio">
-        <title> S&S-Inicio </title>
+        <title> S&S Boda-Inicio </title>
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="shortcut icon" href="./assets/images/heart-svgrepo-com (1).svg" type="image/png" />
         <link rel="stylesheet" href="./css/bootstrap.min.css">
