--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Nuestro contacto para que puedas ayudarnos en este hermoso viaje que es el amor,
     con nuestra luna de miel soñada, gracias a cada uno por su esmero.">
     <meta name="keywords" content="contacto, luna de miel, viaje, deseos, buenas vibras">
-    <title>S&S-Contacto</title>
+    <title>S&S Boda-Contacto</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
