--- a/pages/error.html
+++ b/pages/error.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="página de error 404">
     <meta name="keywords" content="error, error404, boda, retorno, Volver">
-    <title>S&S-Error 404</title>
+    <title>S&S Boda-Error 404</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
