--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,7 @@
     <meta name="description" content="El día de nuestra boda, como fue, donde sucedió, en que predio,
     y mucho mas para que puedas encontrar en esta pestaña.">
     <meta name="keywords" content="nosotros, amor de pareja, opiniones, contexto, juntos por siempre">
-    <title>S&S-Nosotros</title>
+    <title>S&S Boda -Nosotros</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
