--- a/pages/nuestraboda.html
+++ b/pages/nuestraboda.html
@@ -7,7 +7,7 @@
     <meta name="description" content="El día de nuestra boda, como fue, donde sucedió, en que predio,
     y mucho mas para que puedas encontrar en esta pestaña.">
     <meta name="keywords" content="nuestra boda, alianza, historia real, aire libre, juntos, relato de amor">
-    <title> S&S-Nuestra Boda</title>
+    <title> S&S Boda -Nuestra Boda</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -66,7 +66,7 @@
                   al igual que las invitaciones y muchas cosas y detalles que tuvo la boda salieron de nuestra imaginación 
                   ,era un día donde éramos las estrellas y los protagonistas de cada mirada. Y espero puedan apreciarlo en
                   cada pestaña que vallan recorriendo.  
-                  </p>
+                </p>
                 </div>
         </section>
             <br>
