--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Una galería con fotos especiales elegidas por nosotros con mucho amor, para que puedas disfrutar un
     poquito nuestra alegría ese día y apreciar juntos los momentos llenos de amor y gratitud">
     <meta name="keywords" content="galeria, fotos de boda, fotos civil, boda al aire libre, ceremonia">
-    <title>S&S-Galeria</title>
+    <title>S&S Boda-Galeria</title>
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../assets/images/heart-svgrepo-com (1).svg" type="image/png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
